# repo1

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.ps1  setup.sh
.cursor/rules/: 00-deck-studio.mdc  10-spec-authoring.mdc  20-build-and-verify.mdc  30-feedback-loop.mdc
.github/workflows/: ci.yml
brand/: BRAND_INTAKE.md  template.pptx  tokens.yaml
decks/_adaptive-check/: spec.yaml
decks/_chrome-check/: spec.yaml
decks/_example-quarterly/: brief.md  spec.yaml
decks/_variant-showcase/: spec.yaml
decks/ai-strategy-2026/: brief.md  extracted.yaml  extracted_report.md  spec.yaml
decks/board-overview-ytd-may/: brief.md  spec.yaml
decks/board-overview-ytd-may/sources/: board-overview-may-2026.md
decks/july-board-exam-fees/: brief.md  insights.md  spec.yaml
decks/july-board-exam-fees/sources/: candidate-pipeline-mix.md  exam-fee-proposal-memo.md  q2-2026-exam-detail.md  (+1 more)
decks/morph-deliverables/: brief.md  extracted.yaml  extracted_report.md  spec.yaml
decks/morph-sponsor-status/: brief.md  extracted.yaml  extracted_report.md  spec.yaml
decks/pd-strategy-brainstorm/: brief.md  extracted.yaml  extracted_report.md  spec.yaml
playbooks/: 00-INDEX.md  audience-adaptation.md  data-storytelling.md  executive-communication.md  insight-finding.md  presentation-design.md  slide-type-catalog.md
src/deckstudio/: __init__.py  cli.py  tokens.py
tests/: conftest.py  test_animations.py  test_extract.py  test_golden_deck.py  test_ingest.py  test_insights.py  test_lint.py  test_schema.py  test_template_layout.py  test_text_markup.py  test_variants.py
(+39 files in other folders)
