[project]
name = "deckstudio"
version = "0.1.0"
description = "SOA Deck Studio - compile deck specs into brand-perfect, natively editable PowerPoint decks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-pptx>=1.0.2",
    "pydantic>=2.7",
    "ruamel.yaml>=0.18",
    "typer>=0.12",
    "rich>=13.7",
    "pypdf>=4.2",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "lxml>=5.2",
    "Pillow>=10.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
deckstudio = "deckstudio.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deckstudio"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# typer's declarative CLI style requires calls in argument defaults
"src/deckstudio/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
